@@ -2,6 +2,7 @@ MicroEmulator
 
 0.3.1
 - device display is better customizable
+- many fixes in ChoiceGroup (Shane Harper)
 - app: fixed NullPointerException when run ME without initial MIDlet
 - app: defined Main-Class in the MANIFEST.MF file - running also by java -jar
 
